# Thermocam_analisys_Optris

./: README.md  log.txt
optris_drivers/: libirimager-8.5.1-amd64.deb  manifest.yaml
optris_drivers/config/: 15040___.xml  Cali-15040___.xml  Format.def  Kennlinie-15040___-38-0-250.prn  Kennlinie-15040___-38-200-1500.prn  generic.xml  ir_find_serial_docu_example.xml
optris_drivers/examples/: README  delete_me.html
optris_drivers/examples/config/: generic.xml  generic_windows.xml
optris_drivers/examples/daemon/: CMakeLists.txt  irDirectDaemon.cpp
optris_drivers/examples/directbinding/: CMakeLists.txt  direct_binding_tcp_show.cpp  direct_binding_usb_show.cpp
optris_drivers/examples/matlab/: EvoIRMatlabInterface.m  EvoIRViewer.m  README.txt  evo_ir_matlab_example.m
optris_drivers/examples/minimal/: CMakeLists.txt  checkRawFramerate.cpp  convertRaw2PPM.cpp  serializeRaw.cpp
optris_drivers/examples/oop/: CMakeLists.txt  IRImagerGUI.cpp  IRImagerGUI.h  IRImagerHandler.cpp  IRImagerHandler.h  irimagerShowOOP.cpp
optris_drivers/examples/opengl/: CMakeLists.txt  Image.h  Obvious2D.cpp  Obvious2D.h  irimagerShow.cpp  irimagerTwinShow.cpp
optris_drivers/examples/pif/: CMakeLists.txt  IRPifExample.cpp
optris_drivers/examples/python/: direct_binding_usb_show.py
optris_drivers/launch/: optris_drivers.launch
optris_drivers/src/: OptrisImager.cpp  OptrisImager.h  optris_binary_image_node.cpp
peek_thermal/: CMakeLists.txt  LICENSE  README.md  package.xml
peek_thermal/config/: hsv_parameters.cfg
peek_thermal/include/peek_thermal/: CameraInfoParser.hpp  ConvertToCVimage.hpp  PeekThermal.hpp  reconstruction.h
peek_thermal/launch/: play_rosbag.launch  start.launch
peek_thermal/nodes/: colorbars.py  determine_hsv_values.py  dot_detection.py
peek_thermal/src/: CameraInfoParser.cpp  ConvertToCVimage.cpp  PeekThermal.cpp  objectTrackingTut.cpp  peek_thermal_node.cpp
peek_thermal/src/tools/: reconstruction.cpp
