<?xml version="1.0"?>
<package format="2">
  <name>peek_thermal</name>
  <version>0.1.0</version>
  <description>A packge for anaylzing thermal image data related to PEEK.</description>
  <maintainer email="engemann@fh-aachen.de">Heiko Engemann</maintainer>
  <license>BSD</license>
  <author email="engemann@fh-aachen.de">Heiko Engemann</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!--<depend>eigen</depend>-->
  <!--<depend>boost</depend>-->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
