CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

PROJECT(IRIMAGEROPENGLEXAMPLE)

SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_C_FLAGS "-U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=0")
SET(CMAKE_CXX_FLAGS "-D_GLIBCXX_USE_CXX11_ABI=0 -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=0")

INCLUDE_DIRECTORIES(/usr/include/libirimager)
LINK_DIRECTORIES(/usr/lib)

LINK_LIBRARIES(irdirectsdk udev GL GLU glut pthread usb-1.0)

ADD_EXECUTABLE(irimager_show Obvious2D.cpp irimagerShow.cpp)
ADD_EXECUTABLE(irimager_twin_show Obvious2D.cpp irimagerTwinShow.cpp)
